--- a/src/sass/modules/components.sass
+++ b/src/sass/modules/components.sass
@@ -4,7 +4,15 @@
 // Date: 2018/02/26
 //
 // SASS stylesheet for components
+@import ../../../node_modules/bootstrap/scss/mixins/_breakpoints.scss
+@import ../../../node_modules/bootstrap/scss/functions
+@import ../../../node_modules/bootstrap/scss/_variables.scss
+
 
 .cons-carousel-caption
     background-color: rgba(1, 22, 39, 0.5)
     color: inherit
+
+.carousel-item img
+    margin: auto
+    max-height: 100vh
