--- a/src/css/modules/components.css
+++ b/src/css/modules/components.css
@@ -1,3 +1,7 @@
 .cons-carousel-caption {
   background-color: rgba(1, 22, 39, 0.5);
   color: inherit; }
+
+.carousel-item img {
+  margin: auto;
+  max-height: 100vh; }
